--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
             <li><a href="{{ url_for('contact')}}">Contact</a></li>
         </ul>
     </nav>
-    <h1> About Page</h1>
+    <h1> Contact Page</h1>
     
 </body>
 </html>
